syntax = "proto3";
import "temperature_unit.proto";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "HourlyTemperatureProto";

message HourlyTemperatureProto {
  string time = 1;
  int32 temperature = 2;
  int32 imgIdWeatherCode = 3;
  TemperatureUnitProto temperatureUnit = 4;
}
